[package]
name = "evos"
version = "0.1.0"
authors = ["Curly <u007d@humanenginuity.com>"]
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
bool_ext = { version = "0.7.0", default-features = false }
cortex-m-rt = "0.7.5"
cortex-m = "0.7.7"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
derive_more = { version = "1.0.0", default-features = false, features = ["full"] }
embassy-executor = { version = "0.6.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-sync = { version = "0.6.0" }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-futures = { version = "0.1.1" }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", ]}
enum-iterator = "2.1.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "abort"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false

[lints.rust]
# Uncomment before ship to reconcile use of possibly redundant crates, debug remnants, missing
# license files and more
#blanket_clippy_restriction_lints = "allow"
#implicit_return = "allow"
#cargo = "warn"
#restriction = "warn"

# To use the `unsafe` keyword, do not remove the `unsafe_code = "forbid"` entry.
# Instead, prefer to change it to `unsafe_code = "deny"` + opt-in with local use of
# `#[allow(unsafe_code)]`'s on an as needed basis.
unsafe_code = "deny"
bare_trait_objects = "forbid"

rust_2018_idioms = { level = "warn", priority = -1 }

# Uncomment before ship to reconcile use of possibly redundant crates, debug remnants, missing
# license files and more
#missing_docs = "warn"
#warnings = "deny"

[lints.clippy]
# Safety-critical application lints
enum_glob_use = "forbid"

arithmetic_side_effects = "deny"
float_cmp_const = "deny"
indexing_slicing = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
wildcard_imports = "deny"

all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# End of safety-critical application lints

enum_variant_names = "allow"
equatable_if_let = "allow"
implicit_return = "allow"
items-after-statements = "allow"
iter_nth_zero = "allow"
match_bool = "allow"
match-same-arms = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
obfuscated_if_else = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"
unnecessary_wraps = "allow"
